--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,7 +10,7 @@ jobs:
   ubuntu_14:
     name: Ubuntu 14
     runs-on: ubuntu-22.04
-    container: ubuntu-14.04
+    container: ubuntu:14.04
     steps:
       - uses: actions/checkout@v2
       - name: install packages
@@ -26,7 +26,7 @@ jobs:
   ubuntu_16:
     name: Ubuntu 16
     runs-on: ubuntu-22.04
-    container: ubuntu-16.04
+    container: ubuntu:16.04
     steps:
       - uses: actions/checkout@v2
       - name: install packages
@@ -42,7 +42,7 @@ jobs:
   ubuntu_18:
     name: Ubuntu 18
     runs-on: ubuntu-22.04
-    container: ubuntu-18.04
+    container: ubuntu:18.04
     steps:
       - uses: actions/checkout@v2
       - name: install packages
@@ -58,7 +58,7 @@ jobs:
   ubuntu_20:
     name: Ubuntu 20
     runs-on: ubuntu-22.04
-    container: ubuntu-20.04
+    container: ubuntu:20.04
     steps:
     - uses: actions/checkout@v2
     - name: install packages
