--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install packages
-        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: test
@@ -30,7 +30,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install packages
-        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: test
@@ -46,7 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install packages
-        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: test
@@ -62,7 +62,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install packages
-      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+      run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
     - name: install htslib
       run: ./scripts/install-hts.sh
     - name: test
@@ -77,7 +77,7 @@ jobs:
       steps:
       - uses: actions/checkout@v2
       - name: install packages
-        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make
+        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: test
@@ -133,6 +133,6 @@ jobs:
       with:
         args: >
           bash -c "apt-get update &&
-          apt-get install -y zlib1g-dev gcc make &&
+          apt-get install -y zlib1g-dev gcc make wget curl &&
           ldd --version && gcc --version &&
           make && make test"
