--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -20,7 +20,7 @@ jobs:
       - name: test
         run: make test
       - name: install valgrind
-        run: sudo apt-get install valgrind
+        run: sudo apt-get install -y valgrind
       - name: memtest
         run: make memtest
   ubuntu_16:
@@ -36,7 +36,7 @@ jobs:
       - name: test
         run: make test
       - name: install valgrind
-        run: sudo apt-get install valgrind
+        run: sudo apt-get install -y valgrind
       - name: memtest
         run: make memtest
   ubuntu_18:
@@ -52,7 +52,7 @@ jobs:
       - name: test
         run: make test
       - name: install valgrind
-        run: sudo apt-get install valgrind
+        run: sudo apt-get install -y valgrind
       - name: memtest
         run: make memtest
   ubuntu_20:
@@ -68,7 +68,7 @@ jobs:
     - name: test
       run: make test
     - name: install valgrind
-      run: sudo apt-get install valgrind
+      run: sudo apt-get install -y valgrind
     - name: memtest
       run: make memtest
   ubuntu_22:
@@ -83,7 +83,7 @@ jobs:
       - name: test
         run: make test
       - name: install valgrind
-        run: sudo apt-get install valgrind
+        run: sudo apt-get install -y valgrind
       - name: memtest
         run: make memtest
   ubuntu_20_icc:
