--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -103,6 +103,8 @@ jobs:
         sudo apt-get update
     - name: install packages
       run: sudo apt-get install -y zlib1g-dev libzstd-dev intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
+    - name: install htslib
+      run: ./scripts/install-hts.sh
     - name: Setup Intel oneAPI environment
       run: |
         source /opt/intel/oneapi/setvars.sh
@@ -116,6 +118,8 @@ jobs:
     runs-on: macos-11
     steps:
     - uses: actions/checkout@v2
+    - name: install htslib
+      run: ./scripts/install-hts.sh
     - name: build
       run: make -j8
     - name: test
@@ -135,4 +139,4 @@ jobs:
           bash -c "apt-get update &&
           apt-get install -y zlib1g-dev gcc make wget curl &&
           ldd --version && gcc --version &&
-          make && make test"
+          ./scripts/install-hts.sh && make && make test"
