--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -47,6 +47,8 @@ jobs:
     container: ubuntu:18.04
     steps:
       - uses: actions/checkout@v2
+      - name: Install sudo package
+        run: apt update && apt install sudo
       - name: install packages
         run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
       - name: install htslib
@@ -63,6 +65,8 @@ jobs:
     container: ubuntu:20.04
     steps:
     - uses: actions/checkout@v2
+    - name: Install sudo package
+      run: apt update && apt install sudo
     - name: install packages
       run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
     - name: install htslib
