--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,10 +25,8 @@ jobs:
     container: ubuntu:16.04
     steps:
       - uses: actions/checkout@v2
-      - name: Install sudo package
-        run: apt update && apt install sudo
       - name: install packages
-        run: sudo apt-get update && sudo apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
+        run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: test
