--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: install packages
-        run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl
+        run: apt-get update && apt-get install -y zlib1g-dev gcc g++ autoconf automake make wget curl bgzip2
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: test
