--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -35,7 +35,7 @@ jobs:
       - name: install htslib
         run: ./scripts/install-hts.sh
       - name: install valgrind
-        run: sudo apt-get install -y valgrind
+        run: apt-get install -y valgrind
       - name: memtest
         run: make memtest
   ubuntu_18:
