--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -111,33 +111,33 @@ jobs:
         run: make clean && make CC=clang -j8
       - name: test-clang
         run: make test
-  ubuntu_20_icc:
-    name: Ubuntu 20 icc
-    runs-on: ubuntu-20.04
-    steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-    - name: Intel Apt repository
-      timeout-minutes: 1
-      run: |
-        wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-        sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-        rm GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
-        echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
-        sudo apt-get update
-    - name: install packages
-      run: sudo apt-get install -y zlib1g-dev libzstd-dev intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
-    - name: install htslib
-      run: ./scripts/install-hts.sh
-    - name: Setup Intel oneAPI environment
-      run: |
-        source /opt/intel/oneapi/setvars.sh
-        printenv >> $GITHUB_ENV
-    - name: build
-      run: make CC=icc -j8
-    - name: test
-      run: make test
+  # ubuntu_20_icc:
+  #   name: Ubuntu 20 icc
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #   - uses: actions/checkout@v2
+  #     with:
+  #       submodules: recursive
+  #   - name: Intel Apt repository
+  #     timeout-minutes: 1
+  #     run: |
+  #       wget https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
+  #       sudo apt-key add GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
+  #       rm GPG-PUB-KEY-INTEL-SW-PRODUCTS-2023.PUB
+  #       echo "deb https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+  #       sudo apt-get update
+  #   - name: install packages
+  #     run: sudo apt-get install -y zlib1g-dev libzstd-dev intel-oneapi-compiler-dpcpp-cpp-and-cpp-classic
+  #   - name: install htslib
+  #     run: ./scripts/install-hts.sh
+  #   - name: Setup Intel oneAPI environment
+  #     run: |
+  #       source /opt/intel/oneapi/setvars.sh
+  #       printenv >> $GITHUB_ENV
+  #   - name: build
+  #     run: make CC=icc -j8
+  #   - name: test
+  #     run: make test
   # os_x_11:
   #   name: OSX 11
   #   runs-on: macos-11
